# 2026-1-CCD-1-takoyaki-02

./: .gitignore  README.md  package-lock.json
boardgame-ai/: .gitignore  README.md  package-lock.json  pyproject.toml  requirements.txt
boardgame-ai/agents/: __init__.py  base.py  context.py  orchestrator.py  progress_agent.py  rules_agent.py  strategy_agent.py  tempo_agent.py
boardgame-ai/audio/: catalog.py  manager.py  prewarm.py  tts_engine.py
boardgame-ai/backend/: lobby_runner.py  orchestrator.py  server.py  state.py  vision_runner.py  werewolf_runner.py  werewolf_session.py  yacht_runner.py  yacht_session.py
boardgame-ai/benchmarks/: __init__.py  cache_hit_rate.py  channel_latency.py  completion_rate.py  fps_analysis.py  recognition_rate.py  relay.py  resource_usage.py  session.py  trace_collector.py  ui_latency.py  undo_rate.py  ws_recovery.py
boardgame-ai/bridge/: README.md  __init__.py  interface.py  local_bridge.py  websocket_bridge.py
boardgame-ai/core/: README.md  __init__.py  audio.py  constants.py  envelope.py  events.py  models.py  player_manager.py
boardgame-ai/demos/: README.md  __init__.py  common.py  demo1_detection.py  demo2_matching.py  demo3_violation.py  demo4_rolecard.py  demo5_vote.py  live_view.py  register.py
boardgame-ai/docs/: phase1_spec.md  phase2_audio_spec.md  team_workflow.md  게임_추가_가이드.md
boardgame-ai/frontend/: .env.local.example  index.html  package-lock.json  package.json  vite.config.js
boardgame-ai/games/: base_fsm.py
boardgame-ai/tests/: test_arm_vector.py  test_audio.py  test_bench_trace_collector.py  (+15 more)
(+88 files in other folders)
