[project]
name = "boardgame-ai"
version = "0.1.0"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["core*", "bridge*", "vision*", "games*", "audio*", "backend*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
    "black>=23.0",
    "mypy>=1.5",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["vision.*", "games.*", "audio.*", "backend.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
